<resources>
    <string name="app_name">Cool Reader</string>
    <string name="mi_search">Search</string>
    <string name="mi_exit">Exit</string>
    <string name="mi_goto">Go to</string>
    <string name="mi_bookmarks">Bookmarks</string>
    <string name="mi_file_open">Open file</string>
    <string name="mi_options">Options</string>
    <string name="mi_font_size_increase">Increase font size </string>
    <string name="mi_font_size_decrease">Decrease font size</string>
    <string name="mi_font_previous">Previous font</string>
    <string name="mi_font_next">Next font</string>
    <string name="progress_please_wait">Please wait</string>
    <string name="progress_starting_cool_reader">Starting Cool Reader</string>
    <string name="progress_loading">Loading document</string>
    <string name="progress_formatting">Formatting document</string>
    <string name="progress_scanning">Scanning directory</string>
    <string name="context_menu_title_bookmark">Bookmark</string>
    <string name="context_menu_title_book">Book</string>
    <string name="context_menu_title_recent_book">Recent book</string>
    <string name="context_menu_title_folder">Folder</string>
    <string name="mi_book_open">Open book</string>
    <string name="mi_book_recent_books">Recent books</string>
    <string name="mi_book_file_remove">Delete book file</string>
    <string name="mi_book_recent_remove">Remove from list</string>
    <string name="mi_book_recent_goto">Go to directory</string>
    <string name="mi_book_sort_order">Sorting order</string>
    <string name="mi_book_sort_order_filename">By filename</string>
    <string name="mi_book_sort_order_filename_desc">By filename (desc)</string>
    <string name="mi_book_sort_order_timestamp">By timestamp</string>
    <string name="mi_book_sort_order_timestamp_desc">By timestamp (desc)</string>
    <string name="mi_book_sort_order_author">By author</string>
    <string name="mi_book_sort_order_author_desc">By author (desc)</string>
    <string name="mi_book_sort_order_title">By title</string>
    <string name="mi_book_sort_order_title_desc">By title (desc)</string>
    <string name="toggle_dict_once">Toggle dictionary (once)</string>
    <string name="toggle_dict">Toggle dictionary</string>
    <string name="mi_bookmark_set">Set bookmark</string>
    <string name="mi_bookmark_goto">Go to bookmark</string>
    <string name="mi_goto_page">Go to page #</string>
    <string name="mi_goto_percent">Go to position %</string>
    <string name="mi_goto_toc">Table of Contents</string>
    <string name="mi_folder_open">Open folder</string>
    <string name="mi_folder_to_favorites">Add to favorites</string>
    <string name="mi_folder_fav_left">Move left</string>
    <string name="mi_folder_fav_right">Move right</string>
    <string name="mi_folder_fav_remove">Remove</string>
    <string name="mi_folder_delete">Delete…</string>
    <string name="dir_recent_books">Recent Books</string>
    <string name="dir_sd_card">SD Card</string>
    <string name="dir_internal_sd_card">Internal SD Card</string>
    <string name="dir_internal_memory">Internal memory</string>
    <string name="win_title_bookmarks">Bookmarks</string>
    <string name="win_title_dicts">Dictionaries</string>
    <string name="win_title_toc">Table of Contents</string>
    <string name="win_title_options">Options</string>
    <string name="win_title_search">Search</string>
    <string name="win_title_options_apply">Apply changes?</string>
    <string name="win_title_screen_orientation_change_apply">Apply screen orientation change?</string>
    <string name="win_title_log">Log</string>
    <string name="tab_options_styles">Styles</string>
    <string name="tab_options_page">Page</string>
    <string name="tab_options_app">App</string>
    <string name="tab_options_controls">Controls</string>
    <string name="tab_options_css">CSS</string>
    <string name="tab_options_clouds">Clouds</string>
    <string name="options_font_size">Font size</string>
    <string name="options_font_face">Font face</string>
    <string name="options_font_weight">Font weight</string>
    <string name="options_font_embolden">Embolden font</string>
    <string name="options_font_antialias">Font antialiasing</string>
    <string name="options_font_antialias_off">No antialias</string>
    <string name="options_font_antialias_on_for_big">On for big fonts (shades of gray)</string>
    <string name="options_font_antialias_on_for_all">On for all fonts (shades of gray)</string>
    <string name="options_font_antialias_lcd_rgb">LCD (RGB)</string>
    <string name="options_font_antialias_lcd_bgr">LCD (BGR)</string>
    <string name="options_font_antialias_lcd_v_rgb">LCD_V (RGB)</string>
    <string name="options_font_antialias_lcd_v_bgr">LCD_V (BGR)</string>
    <string name="options_interline_space">Interline space</string>
    <string name="options_inverse_view">Night mode</string>
    <string name="options_color_text">Text color</string>
    <string name="options_color_background">Background color</string>
    <string name="options_color_hue">Hue</string>
    <string name="options_color_saturation">Saturation</string>
    <string name="options_color_brightness">Brightness</string>
    <string name="options_background_texture">Background texture</string>
    <string name="options_hyphenation_dictionary">Hyphenation dictionary</string>
    <string name="options_page_show_titlebar">Show title bar</string>
    <string name="options_page_footnotes">Footnotes</string>
    <string name="options_page_orientation">Orientation</string>
    <string name="options_page_orientation_0">Portrait</string>
    <string name="options_page_orientation_90">Landscape</string>
    <string name="options_page_orientation_180">Portrait (180)</string>
    <string name="options_page_orientation_270">Landscape (270)</string>
    <string name="options_page_orientation_sensor">Sensor</string>
    <string name="options_page_orientation_system">Use system setting</string>
    <string name="options_page_landscape_pages">Landscape pages</string>
    <string name="options_page_landscape_pages_one">One page</string>
    <string name="options_page_landscape_pages_two">Two pages</string>
    <string name="options_ignore_document_margins">Ignore document margins</string>
    <string name="options_page_margin_left">Left margin</string>
    <string name="options_page_margin_right">Right margin</string>
    <string name="options_page_margin_top">Top margin</string>
    <string name="options_page_margin_bottom">Bottom margin</string>
    <string name="options_rounded_corners_margin">Margin (for devices with rounded corners)</string>
    <string name="options_view_mode">View mode</string>
    <string name="options_view_mode_pages">Pages</string>
    <string name="options_view_mode_scroll">Scroll</string>
    <string name="options_app_fullscreen">Fullscreen mode</string>
    <string name="options_app_show_cover_pages">Cover pages in browser</string>
    <string name="options_value_on">On</string>
    <string name="options_value_off">Off</string>
    <string name="dlg_search_case_sensitive">Case sensitive</string>
    <string name="dlg_search_reverse">Reverse</string>
    <string name="dlg_search_hint">Type text here</string>
    <string name="dlg_button_ok">OK</string>
    <string name="dlg_button_cancel">Cancel</string>
    <string name="dlg_button_yes">Yes</string>
    <string name="dlg_button_no">No</string>
    <string name="dlg_button_find">Find</string>
    <string name="options_page_animation">Page animation</string>
    <string name="options_controls_enable_volume_keys">Use volume keys for navigation</string>
    <string name="options_app_backlight_screen">Screen backlight brightness</string>
    <string name="options_app_warm_backlight_screen">Warm Screen backlight brightness</string>
    <string name="options_app_backlight_screen_default">Default</string>
    <string name="action_backlight_set_default">Set the backlight brightness as in the system</string>
    <string name="options_app_tapzones_normal">Tap zone actions</string>
    <string name="options_app_key_actions">Key actions</string>
    <string name="options_app_trackball_disable">Disable trackball</string>
    <string name="dir_sd_card_2">SD Card 2</string>
    <string name="mi_book_back_to_reading">Current book</string>
    <string name="mi_book_root">Root</string>
    <string name="action_none">(No action)</string>
    <string name="action_pagedown">Next page</string>
    <string name="action_pageup">Previous page</string>
    <string name="action_search">Search</string>
    <string name="action_recent_books_list">Recent books</string>
    <string name="action_exit">Exit</string>
    <string name="action_pageup_10">Back by 10 pages</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_pagedown_10">Forward by 10 pages</string>
    <string name="action_toc">Table of Contents</string>
    <string name="action_go_percent">Go to Percent</string>
    <string name="action_go_page">Go to Page</string>
    <string name="action_go_first_page">First page</string>
    <string name="action_go_last_page">Last page</string>
    <string name="dlg_bookmark_edit_comment">Comment</string>
    <string name="dlg_bookmark_type_correction">Correction</string>
    <string name="dlg_bookmark_edit_range_text">Selection text</string>
    <string name="dlg_bookmark_type_comment">Comment</string>
    <string name="mi_bookmark_add">Add</string>
    <string name="mi_bookmark_delete">Delete</string>
    <string name="mi_bookmark_edit">Edit</string>
    <string name="mi_bookmark_export">Export bookmarks</string>
    <string name="mi_book_scan_recursive">Scan books in directory</string>
    <string name="dlg_book_search_title">Title</string>
    <string name="dlg_book_search_series">Series</string>
    <string name="dlg_book_search_filename">Filename</string>
    <string name="dlg_book_search_author">Author</string>
    <string name="dlg_book_search_prompt">Enter search pattern:</string>
    <string name="mi_book_search">Find</string>
    <string name="dlg_about_donation">Cool Reader is free and will always be free. If you want to support development of this project, you can buy donation package from Android Market.</string>
    <string name="dlg_about_donation_bronze">$1: buy Cool Reader Bronze Donation</string>
    <string name="dlg_about_donation_silver">$3: buy Cool Reader Silver Donation</string>
    <string name="dlg_about_donation_gold">$10: buy Cool Reader Gold Donation</string>
    <string name="dlg_about_fonts_dirs">Fonts directories:</string>
    <string name="dlg_about_textures_dirs">Textures directories:</string>
    <string name="dlg_about_backgrounds_dirs">Backgrounds directories:</string>
    <string name="dlg_about_hyphenations_dirs">Hyphenation dictionaries directories:</string>
    <string name="mi_book_browser_simple_mode">Simple file list</string>
    <string name="mi_book_opds_root">Online catalogs</string>
    <string name="mi_catalog_add">New Catalog</string>
    <string name="mi_bookmark_send">Send</string>
    <string name="tb_button_find_prev">Find previous</string>
    <string name="tb_button_find_close">Close search</string>
    <string name="tb_button_find_next">Find next</string>
    <string name="note1_reader_menu">WARNING: To support fullscreen mode and dimming of softkeys on Android 3 and 4, target Android version has been changed to Android 4. In this mode legacy Menu soft button is not available anymore. Without reader toolbar, in reading mode you can open menu by tapping at center of screen. Long tap at center of screen shows settings dialog. Turn on toolbar in reading mode now? (You can always change this option in Settings/Page/Toolbar)</string>
    <string name="googledrive_remotefile_is_newer_confirm">Remote file \"%s\" on Google Drive is newer that local file, whatever save local to Drive or load remote?</string>
</resources>