<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
<EditText 
    android:id="@+id/search_text" 
    android:layout_width="fill_parent" 
    android:layout_height="wrap_content"
	android:text="" 
    style="@style/TextAppearance.Widget.EditText"
	android:editable="true" android:hint="@string/dlg_search_hint" android:singleLine="true"
/>
<CheckBox android:text="@string/dlg_search_case_sensitive" android:id="@+id/search_case_sensitive" android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>
<CheckBox android:text="@string/dlg_search_reverse" android:id="@+id/search_reverse" android:layout_width="fill_parent" android:layout_height="wrap_content"></CheckBox>

	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/history_list"
		android:orientation="vertical"
		android:layout_weight="8"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:baselineAligned="false"
		android:layout_marginTop="0dip"
		android:layout_marginBottom="0dip"
		android:layout_marginLeft="0dip"
		android:layout_marginRight="0dip"
		>

	</LinearLayout>

</LinearLayout>
