<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">

		<TextView
			android:id="@+id/lbl_position"
			style="@style/TextAppearance.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dip"
			android:maxLines="3"
			android:singleLine="false"
			android:text="Page 34/1024 (25%) Chapter 1" />

		<RadioGroup
			android:id="@+id/rg_type"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<RadioButton
				android:id="@+id/rb_comment"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:checked="true"
				android:text="@string/dlg_bookmark_type_comment" />

			<RadioButton
				android:id="@+id/rb_correction"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:checked="false"
				android:text="@string/dlg_bookmark_type_correction" />
		</RadioGroup>

		<TextView
			android:id="@+id/lbl_selection_text"
			style="@style/TextAppearance.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="3"
			android:singleLine="false"
			android:text="@string/dlg_bookmark_edit_range_text" />

		<EditText
			android:id="@+id/position_text"
			style="@style/TextAppearance.Widget.EditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:editable="false"
			android:inputType="none"
			android:singleLine="false"
			android:text="position text" />

		<TextView
			android:id="@+id/lbl_comment_text"
			style="@style/TextAppearance.Medium"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:maxLines="3"
			android:singleLine="false"
			android:text="@string/dlg_bookmark_edit_comment" />

		<EditText
			android:id="@+id/comment_edit"
			style="@style/TextAppearance.Widget.EditText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:editable="true"
			android:singleLine="false"
			android:text="comment text" />
	</LinearLayout>
</ScrollView>