<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
            android:id="@+id/msg_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="10dip"
            android:layout_marginRight="10dip"
            android:layout_marginBottom="10dip"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbars="vertical"
            android:text="@string/googledrive_remotefile_is_newer_confirm" />

    <LinearLayout
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_marginBottom="10dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
                android:id="@id/base_dlg_btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:text="@string/dlg_button_ok" />

        <Button
                android:id="@id/base_dlg_btn_negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="100dip"
                android:text="@string/dlg_button_cancel" />

    </LinearLayout>        
</LinearLayout>
