<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical">
        <TextView android:text="@string/dlg_about_fonts_dirs"
                  android:id="@+id/fonts_dirs_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="fonts_dir"
                  android:id="@+id/fonts_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_textures_dirs"
                  android:id="@+id/textures_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="textures_dir"
                  android:id="@+id/textures_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_backgrounds_dirs"
                  android:id="@+id/backgrounds_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="backgrounds_dir"
                  android:id="@+id/backgrounds_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="@string/dlg_about_hyphenations_dirs"
                  android:id="@+id/hyphenations_dir_header"
                  style="@style/TextAppearance.Large"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
        <TextView android:text="hyph_dir"
                  android:id="@+id/hyph_dirs"
                  style="@style/TextAppearance.Small"
                  android:layout_margin="4dip" android:layout_width="fill_parent" android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>
