<?xml version="1.0" encoding="utf-8"?>
<!--
   Option item layout for CR3 options dialog
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/toc_item_body"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="true"
    >

    <ImageButton android:id="@+id/search_btn_prev"
        style="@style/TextAppearance.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cr3_find_prev"
        android:background="@null"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="10dip"
        android:contentDescription="@string/tb_button_find_prev"/>
        />
    <ImageButton android:id="@+id/search_btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:src="@drawable/cr3_find_close"
        android:contentDescription="@string/tb_button_find_close"/>
        />
    <ImageButton android:id="@+id/search_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_marginTop="2dip"
        android:layout_marginBottom="2dip"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="8dip"
        android:src="@drawable/cr3_find_next"
        android:contentDescription="@string/tb_button_find_next"/>
        />
</LinearLayout>
